# ha-smart-power-switcher

./: .gitignore  LICENSE  package-lock.json  package.json  readme.md
api/: package-lock.json  package.json  tsconfig.json
api/src/: DateTimeUtils.test.ts  DateTimeUtils.ts  PricelistItem.ts  index.ts
audi-battery-status-web-app/: package.json  tsconfig.json
audi-battery-status-web-app/public/: index.html
audi-battery-status-web-app/src/: App.tsx  ChargingStatusComponenet.css  ChargingStatusComponent.tsx  (+1 more)
audi-tracker/: get-audi-details.sh  login.sh  parking-position.sh  refresh-token.sh
rusty-server/: Cargo.toml  rustfmt.toml  settings.yaml  test-rest-calls.http
rusty-server/src/: lib.rs  main.rs  model.rs  price_list_providers.rs  services.rs  settings.rs
rusty-server/src/model/: consumption_plan.rs  errors.rs  mod.rs  price_list.rs  serde.rs
rusty-server/src/power_consumers/: home_assistant_service.rs  mod.rs  power_consumer.rs  power_consumers_service.rs  switch_actions_scheduler.rs
rusty-server/src/price_list_providers/: commons.rs  day_ahead_market_price_list_provider.rs  mod.rs  tariff_selector.rs  tariff_selector_pricelist.rs  time_period_price_list_service.rs  time_period_pricelist_service.rs  w12_price_list_provider.rs
rusty-server/tests/: home_assistant_service_tests.rs
server/: DateTimeUtils.test.ts  DateTimeUtils.ts  DynamicPricelistProvider.ts  PricelistItem.ts  RdnPricelistProvider.test.ts  RdnPricelistProvider.ts  SingleDayPricelist.ts  deployment.sh  package-lock.json  package.json  smart-energy.logs  tsconfig.json
src/: WebServer.ts
web-app/: .env  notes.md  package-lock.json  package.json  webpack.config.js
webapp/: package-lock.json  package.json
(+58 files in other folders)
