[package]
name = "rusty-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.135"
serde_test = "1.0.177"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.0", features = ["serde"] }
