[package]
name = "rusty-server"
version = "0.1.0"
edition = "2021"
include = [
    "settings.yaml",
    ".env*",
]

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.15.6"
dotenvy = "0.15.7"
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.135"
serde_test = "1.0.177"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.12.0", features = ["serde", "v4"] }
