[package]
name = "rusty-server"
version = "0.1.0"
edition = "2021"
include = [
    "settings.yaml",
    ".env*",
]

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.15.6"
curl = "0.4.47"
dotenvy = "0.15.7"
moka = { version="0.12.10", features = ["sync"] }
regex = "1.11.1"
reqwest = "0.12.12"
scraper = "0.22.0"
serde = { version = "1.0.135", features = ["derive"] }
serde_json = "1.0.135"
serde_test = "1.0.177"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = {version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.12.0", features = ["serde", "v4"] }
